using CommunityToolkit.Mvvm.ComponentModel;

namespace CoffeeShopManagement.ViewModels;

public class ViewModelBase : ObservableObject
{
}